非spi形式注入集合类型时的排序